# idaptik

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .guix-channel  CITATION.cff  CODE_OF_CONDUCT.md  Cargo.toml  ECOSYSTEM.scm  ELIXIR_INTEGRATION.md  Justfile  MAINTAINERS.md  META.scm  Makefile  README.adoc  README.md  ROADMAP.md  RSR-COMPLIANCE.md  RSR_COMPLIANCE.adoc  SECURITY.md  STATE.scm  TS_CONVERSION_NEEDED.md  codemeta.json  guix.scm  justfile  validate.nu
.claude/: CLAUDE.md
.github/workflows/: codeql.yml  comprehensive-quality.yml  container-policy.yml  mirror.yml  quality.yml  (+7 more)
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.well-known/: ai.txt  dc.xml  humans.txt  provenance.json  security.txt
docs/: API-REFERENCE.md  CITATIONS.adoc
examples/: 06_bitwise_operations.res  07_puzzle_solver_demo.res  09_complete_workflow.res
idaptik/: DEVELOPMENT.md  QUICKSTART.md  README.md  SUMMARY.md  build-wasm.sh  compose.yml
idaptik/engine/: Cargo.toml
idaptik/engine/src/: lib.rs
idaptik/engine/src/game/: mod.rs  system.rs  types.rs
idaptik/engine/src/stealth/: detection.rs  mod.rs
idaptik/engine/src/wasm/: bindings.rs
src/: CLI.res  game_state.rs  main.rs  port_communication.rs
vm/: .editorconfig  .gitignore  .guix-channel  AUTONOMOUS-DEVELOPMENT-SUMMARY.md  AUTONOMOUS-SESSION-02-SUMMARY.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GRAND-VISION-MAP.md  MIGRATION-GUIDE.md  README.adoc  RSR_COMPLIANCE.adoc  SECURITY.md  STATE.scm  TPCF.md  claude.md  justfile  package.json  rescript.json
(+499 files in other folders)
