[package]
name = "idaptik-engine"
version = "0.1.0"
edition = "2021"
authors = ["IDApTIK Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Game math
glam = { version = "0.25", features = ["serde"] }

# Optional logging for WASM
console_error_panic_hook = { version = "0.1", optional = true }
# wee_alloc removed - using default Rust allocator (now works on WASM)

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
